IMTS-unstable
=============

(MudBot:)
- Completely rewritten the way lines/prompts are parsed and sent to the
  modules for processing.
(Imperian:)
- Rat/spider worth parsing is working again, also added caiman, serpents
  and locusts.
- Impatience should stop trying to focus.
(IMapper:)
- Autolinking added, and enabled by default. Added an option to disable it.
- Floating MXP map window added. Go/Stop buttons added on it, too.
- Duplicate room detection while mapping, added.
- Merging of two identic rooms (duplicate) into one, added.
- Most Pathfinder bugs are now gone. This will mostly affect the wings room
  and Caanae sewer entrances.
- Added an option to disable pathfinding through sewers.
- Added room tags, and replaced the landmarks system with it.
- The 'landmarks' command can be used to list all rooms with a tag.
- 'map path' works with tags instead of vnums too. If more rooms have a
  given tag, 'go' will go to the nearest.
- Now possible to show two or more areas in a single 'map'.
- With the above feature, the parts of the arenas were joined together.
- Binary maps will no longer be generated if one doesn't already exist.
- Mapper help system added. Check 'mhelp index'.
(IOffense:)
- Script block/statement parser added, that supports, in order of creation...
- C-like comments and spacing.
- Local and Global string variables.
- Functions and alias functions.
- Argument passing to functions, and return values from functions or
  statements.
- Variable assignment using a statement's return value, the assignment itself
  being a statement that can be assigned to yet another variable, etc.
- Function call stack, allowing unlimited recursive calls.
- Comparison and concatenating of variables/strings.
- Negation, and's, and or's.



IMTS-5
======

(MudBot:)
- Descriptor handling updated, to allow multiple listening ports.
- Various small changes, for compatibility with the Nexus client.
- The Editor can now make use of Composer's contents, new item added in