@@ -10,15 +10,11 @@ High Priority
 - Windows crash report.
 - do_before's and do_after's.
 - Logging bytes off client.
-- MXP Support.
 - Use Perma Moss.
-- Telnet Neg nag.
 - One time keep-up.
 - landmarks type <type>
 - Variable free/calloc max_x max_y
-- Mxp on Command.
 - Add Davion's changes. Beware of writhing.
-- MCCP on Editor.
 
 
 
